Solved flickering of image, maintaining CallerInformation selection in localstorage

--- a/ClientApp/src/app/search-information/search-information-salesforce.component.css
+++ b/ClientApp/src/app/search-information/search-information-salesforce.component.css
@@ -9,12 +9,9 @@
   display: flex;
 }
 
-.multiMatchLabel {
-  background-color: #1e72ba;
-  color: white;
-  font-size: 9px;
-  padding-left: 2px;
-  padding-right: 2px;
+.multiMatchImg {
+  height: 18px;
+  margin-left: 5px;
 }
 
 .editor {
